<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_mobile_name">mobileCardio</string>
    <string name="app_patient">PatientInfo</string>
    <string name="app_other">OtherInfo</string>
    <string name="app_file_path">FilePath</string>
    <string name="app_settings_colorGp">GraphPaperColor</string>
    <string name="app_settings_colorCh">Character</string>
    <string name="app_settings_colorG">Graphic</string>
    <string name="app_settings_colors">settings_colors_theme</string>
    <string name="app_settings_mode">settings_mode</string>
    
    <string name="app_settings_file">scp_view_settings</string>
    <string name="app_settings_file_paths">settings_file_paths</string>
    <string name="app_settings_file_paths_ecg">settings_file_paths_ecg</string>
    
    <string name="patient">Patient Information</string> 
    <string name="patient_info">PatientInfo</string>
    <string name="id_patient">Patient ID:</string>
    <string name="surname_patient">Surname:</string>
    <string name="father_patient">Middle name:</string>
    <string name="name_patient">Name:</string>
    <string name="birthday_patient">Date of Birth:</string>
    <string name="age_patient">Age:</string>
    <string name="high_patient">Height:</string>
    <string name="weight_patient">Weight:</string>
    <string name="sex_patient">Sex:</string>
    <string name="race_patient">Race:</string>
    <string name="stature_patient">Stature:</string>
    <string name="none_patient">not specified</string>
    <string name="blood_press_patient">Blood pressure</string>
    <string name="sys_press_patient">Systolic blood pressure:</string>
    <string name="dya_press_patient">Diastolic blood pressure:</string>
    <string name="addr_patient">Address</string>
    <string name="posta_code_patient">Postal Code:</string>
    <string name="area_patient">Scope:</string>
    <string name="zone_patient">District:</string>
    <string name="nas_punkt_patient">Settlement:</string>
    <string name="street_patient">Street:</string>
    <string name="house_patient">House:</string>
    <string name="time_life_patient">Length of stay (years):</string>
    <string name="diagnos_patient">Diagnosis or directions:</string>
    <string name="medical_history_patient">Medical history</string>
    <string name="speed">Speed:</string>
    <string name="power">Gain:</string>
    <string name="revert_ecg">Invert</string>
	<string name="maker">Manufacturer:</string>
	<string name="org_num">Number of the organization:</string>
	<string name="dep_num">Department number:</string>
	<string name="dev_id">Device ID:</string>
	<string name="dev_type">Device Type:</string>
	<string name="model">Model:</string>
	<string name="hz">Frequency (Hz):</string>
	<string name="title_dev_do">Special Features</string>
	<string name="soft_version">Analyzing software version:</string>
	<string name="serial_num">Serial number:</string>
	<string name="sys_soft">System Software:</string>
	<string name="soft_scp">Software that implements the SCP:</string>
	<string name="check_print">Print</string>
	<string name="check_analys">Analyz</string>
	<string name="check_save">Storage</string>
	<string name="check_take">Reception</string>
	<string name="org_write_ecg">Institutions, recording ECG:</string>
	<string name="org_analys_ecg">Institution that analyzes ECG:</string>
	<string name="dep_get_ecg">Department who took ECG</string>
	<string name="dep_analys_ecg">Department who analyze ECG</string>
	<string name="go_doctor">Referring physicians:</string>
	<string name="ok_doctor">Certifying physicians:</string>
	<string name="date_get_ecg">Date of receipt of ECG:</string>
	<string name="time_get_ecg">Time of receipt of ECG:</string>
	<string name="zoom">Zoom: </string>
    <string name="none"></string>

    <string name="title_device_ecg">Device ECG</string>
    <string name="title_ecg_info">ECG Info</string>
    
    <string name="title_private_patient">Patient</string>
    <string name="title_pressure_patient">Pressure</string>
    <string name="title_address_patient">Address</string>
    <string name="title_diagnosis_patient">Diagnosis</string>
    <string name="title_history_patient">History</string>
    
    <string name="amode_patient">Patient</string>
    <string name="amode_other">Other</string>
    
    <string name="choose_action">Choose action:</string>
    <string name="no_connection">Internet connection is not avialable</string>
    <string name="not_avialable">This feature is not yet avialable</string>
    
    <string name="msg_open_file">Open ECG File</string>
	<string name="msg_camera">QR-code</string>
	<string name="msg_info">Information</string>
	
	<string name="slider_open_file">File</string>
	<string name="slider_camera">QR-code</string>
	<string name="slider_patient">Patient</string>
	<string name="slider_other">Other</string>
	<string name="slider_settings">Settings</string>
	
	<string name="settings_colors_title">Color</string>
	<string name="settings_colors_summary">color application scheme</string>
	<string name="settings_colors_graph_paper">Graph paper:</string>
	<string name="settings_colors_graphic">Graphic:</string>
	<string name="settings_colors_character">Titles:</string>
	<string name="settings_save">Save</string>
	
	<string name="settings_colors_scheme">Colors Scheme</string>
	<string name="settings_colors_ecg">main colors on ecg</string>
	
	<string-array name="settings_colors_theme">
		<item>Red - Black</item>
		<item>Gray - Blue</item>
	</string-array>
	<string-array name="settings_colors_theme_values">
		<item>0</item>
		<item>1</item>
	</string-array>
	
	<string name="settings_mode_title">Mode</string>
	<string name="settings_mode_summary">application modes</string>
	<string-array name="settings_mode">
		<item selected="true">File manager</item>
		<item>QR-code</item>
	</string-array>
	<string-array name="settings_mode_values">
		<item selected="true">0</item>
		<item>1</item>
	</string-array>
	<string name="settings_mode_qrcode">qr-code</string>
	<string name="settings_mode_filemanager">file-manager</string>
	
	<string name="settings_file_paths_title">File paths</string>
	<string name="settings_file_paths_summary">application file paths</string>
	<string name="settings_file_paths_title_detail">ECG save folder</string>
	<string name="error_decode_qr">Error during decoding qr-code</string>
	<string name="app_version">0.1</string>
	<string name="slider_linear">Linear</string>
</resources>







