<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ScrollView
    	    android:id="@+id/other_scroll_view"
    	    android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="vertical">
	        <RelativeLayout
    	        android:id="@+id/other_info"
    	        style="@style/RelativeStyle">
    	        <RelativeLayout
    	            android:id="@+id/org_write_layout"
    	        	style="@style/RelativeStyle">
					<TextView
					    android:id="@+id/org_write"
					    style="@style/ViewStyleKey"
					    android:text="@string/org_write_ecg" />
					<TextView
					    android:id="@+id/org_write_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/org_write"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/org_analys_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/org_write_layout">
					<View
						android:layout_width="fill_parent"
						android:layout_height="1dip"
						android:background="#FF0000FF"
					/>
					<TextView
					    android:id="@+id/org_analys"
					    style="@style/ViewStyleKey"
					    android:text="@string/org_analys_ecg" />
					<TextView
					    android:id="@+id/org_analys_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/org_analys"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/dep_get_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/org_analys_layout">
					<View
						android:layout_width="fill_parent"
						android:layout_height="1dip"
						android:background="#FF0000FF"
					/>
					<TextView
					    android:id="@+id/dep_get"
					    style="@style/ViewStyleKey"
					    android:text="@string/dep_get_ecg" />
					<TextView
					    android:id="@+id/dep_get_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/dep_get"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/dep_analys_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/dep_get_layout">
					<View
						android:layout_width="fill_parent"
						android:layout_height="1dip"
						android:background="#FF0000FF"
					/>
					<TextView
					    android:id="@+id/dep_analys"
					    style="@style/ViewStyleKey"
					    android:text="@string/dep_analys_ecg" />
					<TextView
					    android:id="@+id/dep_analys_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/dep_analys"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/go_doctor_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/dep_analys_layout">
					<View
						android:layout_width="fill_parent"
						android:layout_height="1dip"
						android:background="#FF0000FF"
					/>
					<TextView
					    android:id="@+id/go_doctor"
					    style="@style/ViewStyleKey"
					    android:text="@string/go_doctor" />
					<TextView
					    android:id="@+id/go_doctor_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/go_doctor"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/ok_doctor_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/go_doctor_layout">
					<View
						android:layout_width="fill_parent"
						android:layout_height="1dip"
						android:background="#FF0000FF"
					/>
					<TextView
					    android:id="@+id/ok_doctor"
					    style="@style/ViewStyleKey"
					    android:text="@string/ok_doctor" />
					<TextView
					    android:id="@+id/ok_doctor_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/ok_doctor"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/date_get_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/ok_doctor_layout">
					<View
						android:layout_width="fill_parent"
						android:layout_height="1dip"
						android:background="#FF0000FF"
					/>
					<TextView
					    android:id="@+id/date_get"
					    style="@style/ViewStyleKey"
					    android:text="@string/date_get_ecg" />
					<TextView
					    android:id="@+id/date_get_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/date_get"
					    android:text="@string/none_patient" />
				</RelativeLayout>
				<RelativeLayout
    	            android:id="@+id/time_get_layout"
    	        	style="@style/RelativeStyle"
    	        	android:layout_below="@id/date_get_layout">
					<View
						android:layout_width="fill_parent"
						android:layout_height="1dip"
						android:background="#FF0000FF"
					/>
					<TextView
					    android:id="@+id/time_get"
					    style="@style/ViewStyleKey"
					    android:text="@string/time_get_ecg" />
					<TextView
					    android:id="@+id/time_get_value"
					    style="@style/EditStyleValue"
					    android:layout_toRightOf="@+id/time_get"
					    android:text="@string/none_patient" />
				</RelativeLayout>
    	    </RelativeLayout>
    </ScrollView>
   	<View
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:background="#FF0000FF"
	/>
</LinearLayout>